--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,6 @@
     <string name="delete">Delete</string>
     <string name="category_delete_title">Important</string>
     <string name="category_delete_description">By deleting a category you will delete all tasks with this category, are tou sure?</string>
+    <string name="empty_category_title">No category found  !</string>
+    <string name="empty_category">Please create a new one</string>
 </resources>
